# DLite

./: .clang-format  .clang-tidy  AGENTS.md  CMakeLists.txt  LICENSE  README.md
docs/: README.md
include/dlite/: disasm.hpp  loader.hpp  pe_loader.hpp
src/: disasm.cpp  loader.cpp  pe_loader.cpp
test/: CMakeLists.txt  load_test.cpp  test.cpp
tests/: CMakeLists.txt  test.cpp
